src/components/SearchSection/SearchBar/search-bar.scss
@import '../../../styles/base/base';

::placeholder {
    color: $color-ghost;
}

.search-bar {
    background: $color-white;
    border: 1px solid $color-ghost;
    border-radius: 5px;
    display: flex;
    flex-grow: 1;
    padding: 13px 16px;
    position: relative;

    &:focus-within {
        border-color: $color-fiord;
    }

    &__button {
        align-items: center;
        background: transparent;
        border: 0;
        cursor: pointer;
        display: flex;
        padding: 0;

        &--hidden {
            display: none;
        }
    }

    &__text-field {
        border: 0;
        font-family: $main-font;
        font-size: $size-14;
        font-weight: $weight-regular;
        margin-left: 10px;
        padding: 0;
        width: 100%;

        &:focus {
            outline: 0;
        }
    }
}

